--- a/work53/assets/css/reset.css
+++ b/work53/assets/css/reset.css
@@ -49,7 +49,8 @@ a {
 	text-decoration:none;color:#222
 }
 body, input, textarea, select, button {
-	font-family: 'Montserrat', sans-serif;
+	font-family: 'Noto Sans KR', sans-serif;
+	/* font-family: 'Montserrat', sans-serif; */
 	box-sizing:border-box;
 }
 button {
