--- a/work53/assets/css/style.css
+++ b/work53/assets/css/style.css
@@ -27,9 +27,8 @@ body {background:#f5f5f5;}
 .dl_wrap dd {color:#6f7070;flex:1;font-size:12px;font-weight:500;line-height:1.45;}
 
 /* (공통) TAB */
-.tab_ty01 {display:flex;justify-content:center;}
-.tab_ty01 > * {width:auto;margin-left:8px;padding:3px 14px;border-radius:52px;border:1px solid rgb(181,181,181);font-size:11px;font-weight:300;}
-.tab_ty01 > *:first-child {margin-left:0}
+.tab_ty01 {display:flex;justify-content:space-between;}
+.tab_ty01 > * {width:auto;padding:4px 16px 5px;border-radius:52px;border:1px solid rgb(181,181,181);font-size:12px;font-weight:300;}
 .tab_ty01 > *.active {border-color:rgba(255,229,209,0.47);background-color: rgba(255,229,209,0.47);font-weight:600;}
 
 /* 로그아웃 */
@@ -115,9 +114,9 @@ body {background:#f5f5f5;}
 .check_ty02 input[type="checkbox"]:checked + label:before, .check_ty02 input[type="radio"]:checked + label:before {border-color:#fd9647;background:#fd9647 url(../images/check.png) no-repeat;background-size:cover;}
 
 /* (공통)select */
-.select_ty01 {display:inline-block;position:relative;min-width:55px;line-height:1}
-.select_ty01:after {display:inline-block;position:absolute;right:0;top:50%;width:10px;height:5px;background:url(../images/icon_select.png) no-repeat 50% 50% / 10px;vertical-align:middle;content:'';}
-.select_ty01 select {width:100%;-moz-appearance:none;-webkit-appearance:none;appearance:none;border:0;color:rgb(182,182,182);background-color:transparent;padding-right:13px;font-size:12px}
+.select_ty01 {display:inline-block;position:relative;padding-right:8px;line-height:1}
+.select_ty01:after {display:inline-block;right:0;top:50%;width:10px;height:5px;background:url(../images/icon_select.png) no-repeat 50% 50% / 10px;vertical-align:middle;content:'';}
+.select_ty01 select {-moz-appearance:none;-webkit-appearance:none;appearance:none;border:0;color:rgb(182,182,182);background-color:transparent;}
 .select_ty01 select::-ms-expand {display:none}
 .custom-select {position: relative;font-size:12px;color:#c4c4c4}
 .custom-select select {display: none;}
@@ -299,7 +298,6 @@ input[type="checkbox"] {display: none;}
 .board_list .list > li > a span {font-size:10px;color:rgb(112,112,112)}
 
 /* 게시판 - 보기 */
-.board_view {}
 .board_view h4 {overflow:hidden;margin:0 0 18px;padding:0 0 10px;font-size:10px;color:rgb(112,112,112);border-bottom:1px solid #d1d1d1;font-weight:400;font-size:15px;color:#000;}
 .board_view h4 span {margin:4px 0 0;font-size:10px;color:rgb(112,112,112);float:right}
 .board_view .swiper-wrapper {padding:0 0 80px}
@@ -313,7 +311,7 @@ input[type="checkbox"] {display: none;}
 #accordion .title.active:after {transform:rotate(0);}
 #accordion .panel {display:none;padding:0 0 15px}
 #accordion .row:first-child .title {border-top:0}
-.mypage {padding:20px 5%;}
+.mypage {padding:20px 5%}
 .mypage .step_list {margin:0 0 18px;padding:14px 0;background:rgb(244,244,244);font-size:0;}
 .mypage .step_list > li {width:25%;text-align:center;display:inline-block;position:relative;}
 .mypage .step_list > li strong {font-size:24px;color:rgb(112,112,112);font-weight:400;position: relative;display: block;}
@@ -344,7 +342,7 @@ input[type="checkbox"] {display: none;}
 
 /* 예약 내역 */
 .mypage02 {padding:30px 5%;}
-#content.mypage02 h3 {margin:0 0 30px;font-size:18px;text-align:left;}
+#content.mypage02 h3 {margin:0 0 30px;font-size:17px;text-align:left;}
 .mypage02 h3 span {color:rgb(253,150,71)}
 .mypage02 .tab {position: relative;}
 .mypage02 .tab h4 {position:absolute;top:0;font-size:15px;font-weight:400;margin:0 0 10px}
@@ -355,10 +353,10 @@ input[type="checkbox"] {display: none;}
 .mypage02 .tab > li.active h4 span {position: relative;z-index: 2;}
 .mypage02 .tab > li.active h4:before {position:absolute;left:0;bottom:0;z-index:2;width:100%;height:3px;background:rgb(133,188,157);content:''}
 .mypage02 .tab > li.active .panel {display:block}
-.mypage02 .tab .list > li {display:flex;border-bottom:1px solid #707070;padding:7px 0;height:50px;align-items:flex-end;}
+.mypage02 .tab .list > li {display:flex;border-bottom:1px solid #707070;padding:10px 0;height:50px;align-items:flex-end;}
 .mypage02 .tab .list > li.strong {font-weight:600;}
 .mypage02 .tab .list > li.strong .date {font-weight:600;}
-.mypage02 .tab .list > li > span {font-size:14px;}
+.mypage02 .tab .list > li > span {font-size:15px;}
 .mypage02 .tab .list .cate {width:25%}
 .mypage02 .tab .list .place {width:50%}
 .mypage02 .tab .list .date {width:35%;font-weight:bold;}
@@ -370,16 +368,14 @@ input[type="checkbox"] {display: none;}
 .layer_mypage02 .popup {padding:20px}
 .layer_mypage02 .popup .btn_close {font-size:20px}
 .layer_mypage02 .period_form {margin:40px 0 0;text-align:center;}
-.layer_mypage02 .period_form span {padding:0 6px;font-size:12px;color:rgb(181,181,181)}
+.layer_mypage02 .period_form span {padding:0 10px;font-size:12px}
 .layer_mypage02 .period_form img {width:23.5px;margin-left:10px}
-.layer_mypage02 .period_form input[type="text"] {width:30%;padding:4px 0;border:0;border-bottom:1px solid #aaa;border-radius:0;font-size:13px;letter-spacing:-0.5px;color:#555;outline:none;}
+.layer_mypage02 .period_form input[type="text"] {width:30%;border:0;border-bottom:1px solid #aaa;border-radius:0;}
 .layer_mypage02 .period_form label {margin-left:4px}
-.layer_mypage02 .btn_wrap {padding:20px 0 0;text-align:right;}
+.layer_mypage02 .btn_wrap {padding:14px 0 0;text-align:right;}
 .layer_mypage02 .popup_content > * {display:none;}
-.layer_mypage02 .popup_content .btn_wrap button {font-size:12px;font-weight:600;}
 .layer_mypage02.lp_period .popup_content .period_form {display:block;}
 .layer_mypage02.lp_review .popup_content .star_wrap {display:block;text-align:center;}
-.layer_mypage02.lp_review .popup_content .star_wrap h4 {margin:0 0 10px;font-size:12px;font-weight:500;}
 
 /* 상담내역 */
 .counhistory .tab .list .date {font-weight:400;}
@@ -463,31 +459,28 @@ input[type="checkbox"] {display: none;}
 .star {position:relative;width:75px;height:15px}
 .star img {width:75px;vertical-align:top;}
 .star .on_img {background:url(../images/star_on.jpg) no-repeat 0 50% / 75px;position:absolute;left:0;top:0;width:100%;height:15px}
-.star_type02 {position:relative;width:215px;margin:0 auto}
-.star_type02 img {width:100%;vertical-align:top;}
-.star_type02 .on_img {background:url(../images/star_on.png) no-repeat 0 50% / 215px;position:absolute;left:0;top:0;width:100%;height:43px}
+.star_type02 {position:relative;width:75px;height:15px}
+.star_type02 img {width:75px;vertical-align:top;}
+.star_type02 .on_img {background:url(../images/star_on.jpg) no-repeat 0 50% / 75px;position:absolute;left:0;top:0;width:100%;height:15px}
 
 /* (공통)진료예약화면 01, 호텔예약화면 01 */
-.reservation_list {}
 .reservation_list .inner {padding:25px 5%}
 .reservation_list .map iframe {width:100%}
 .reservation_list .map .searchbar_ty03 {margin:-23px 15px 0}
 .reservation_list .title_area {display:flex;justify-content:space-between;align-items:center;}
 .reservation_list .title_area .sorting > * {margin-left:15px}
-.reservation_list .hospital_list {padding:5px 0 0}
 .reservation_list .hospital_list > li {margin:15px 0 0}
 .reservation_list .hospital_list > li > a {display:flex;align-items:center;}
 .reservation_list .hospital_list .thumb {max-width:115px;width:34%}
 .reservation_list .hospital_list .thumb img {width:100%}
 .reservation_list .hospital_list .info {padding-right:14px;flex:1}
-.reservation_list .hospital_list .info h5 {color:rgb(112,112,112);font-size:19px;padding:3px 0 0;font-weight:600;}
-.reservation_list .hospital_list .info p {padding:1px 0 0;color:rgb(182,182,182);font-size:12px}
-.reservation_list .hospital_list .info strong {color:rgb(182,182,182);font-size:11px;font-weight:600;font-family: 'Montserrat', sans-serif;}
+.reservation_list .hospital_list .info h5 {color:rgb(112,112,112);font-size:17px;padding:3px 0 0;font-weight:600;}
+.reservation_list .hospital_list .info p {color:rgb(182,182,182);font-size:10px}
+.reservation_list .hospital_list .info strong {color:rgb(182,182,182);font-size:11px;font-weight:600}
 
 /* (공통)진료예약화면, 호텔예약화면 */
-.reservation {}
-.reservation .title_area {margin:30px 7% 30px;position:relative;}
-.reservation .title_area .like {position:absolute;right:0;top:9px;text-align:center;}
+.reservation .title_area {padding:18px 7%;position:relative;border-bottom:4px solid rgba(235, 235, 235, 0.42);}
+.reservation .title_area .like {position:absolute;right:7%;top:50%;text-align:center;transform:translateY(-50%);}
 .reservation .title_area .like p {margin:3px 0 0;font-size:12px;color:#707070;font-weight:500;}
 .reservation .title_area .like img {width:28px}
 .reservation .title_area .like img.on {display:none;}
@@ -496,7 +489,7 @@ input[type="checkbox"] {display: none;}
 .reservation .title_area .like.on p {color:#FD9647}
 .reservation .title_area h4 {color:rgb(112,112,112);font-size:24px;font-weight:600;}
 .reservation .title_area p {color:rgb(112,112,112);font-size:15px;padding:2px 0 0}
-.reservation .calender { font-family: 'Montserrat', sans-serif;}
+.reservation .calender {}
 .reservation .calender .month {display:block;padding:0 3.5% 5px;font-size:25px;color:rgb(112,112,112)}
 .reservation h5 {font-size:15px;color:rgb(112,112,112);margin:0 0 10px}
 .reservation h5 p {font-size:10px;color:rgb(182,182,182);margin:0 0 0 30px;display:inline-block;font-weight:300;}
@@ -505,11 +498,14 @@ input[type="checkbox"] {display: none;}
 .reservation .select_list > li {display:inline-block;font-size:12px;width:80px;border-radius:30px;line-height:32px;height:32px;vertical-align:top;text-align:center;color:#ddd;background-color:#f5f5f5}
 .reservation .select_list > li:not(.disable) {color:#fff;background-color:#d1d1d1}
 .reservation .select_list > li.active {background:rgba(133,188,157);color:#fff !important;font-weight:bold;}
+.reservation .sticky_area {min-height:100vh;}
+.reservation .sticky_area .title_area {position:sticky;top:0;left:0;z-index:10;background-color:#fff;}
 
 /* 진료예약 02 */
 .diagnosis_02 .calender .swiper-slide {width:37px;height:37px;border-radius:50%;text-align:center;font-size:11px;line-height:37px;}
 .diagnosis_02 .calender .swiper-slide.active span {color:#fff;font-weight:600;background-color:rgb(253,150,71);}
 .diagnosis_02 .dl_wrap {padding:5px 0 0}
+.diagnosis_02 .calender {margin:0 0 40px}
 
 /* (공통)달력 기간 */
 .calender .end_day, .calender .start_day {color:#fff;font-weight:600;background-color:rgb(255,226,204);border-radius:0;position:relative;}
@@ -517,9 +513,10 @@ input[type="checkbox"] {display: none;}
 .calender .start_day:before {display:block;background-color:#fff;content:'';position:absolute;left:0;top:0;;width:50%;height:100%}
 .calender .end_day:before {display:block;background-color:#fff;content:'';position:absolute;right:0;top:0;;width:50%;height:100%}
 .calender .gap {background-color:rgb(255,226,204);border-radius:0;}
-.calender .day_wrap {display:flex;}
+.calender .day_wrap {display:flex;flex-wrap:wrap;}
 .calender .day {width:calc(100% / 7);height:37px;text-align:center;line-height:37px;position:relative;}
 .calender .day > * {width:37px;height:37px;font-size:13px}
+.calender .end_day.start_day {border-radius:0;background:url(../images/date_today_img.png) no-repeat 50% 50% / 30px}
 
 /* (공통)input */
 .input_ty01 {position:relative;}
@@ -535,8 +532,8 @@ input[type="checkbox"] {display: none;}
 .reservation .doctor dl {margin:0 0 5px 8px}
 .reservation .doctor dt {font-size:15px;display:inline-block;}
 .reservation .doctor dd {font-size:10px;color:rgb(153,143,162);display:inline-block;}
-.reservation .inner {margin:30px 7%}
-.reservation .time_list {font-size:0;margin:15px 0 20px;font-family: 'Montserrat', sans-serif;}
+.reservation .inner {margin:30px 4%}
+.reservation .time_list {font-size:0;margin:15px 0 20px}
 .reservation .kind_list {margin-top:-5px;font-size:0}
 .reservation .kind_list > li {display:inline-block;border-radius:30px;font-size:12px;width:calc(25% - 6px);margin-left:8px;line-height:32px;height:32px;vertical-align:top;text-align:center;font-weight:500;color:#fff;position: relative;margin-top:6px;background-color:#d1d1d1;}
 .reservation .kind_list > li:first-child {margin-left:0}
@@ -567,7 +564,7 @@ input[type="checkbox"] {display: none;}
 .hospital_02 .kind_list > li.active {background-color:rgb(253,150,71);}
 .hospital_02 .kind_list > li.etc > span {background-color: rgb(112, 112, 112);color:#fff}
 .hospital_02 .kind_list > li.etc.active > span {background-color:rgb(253,150,71)}
-.hospital_02 .calender .end_day.start_day {border-radius:0;background:url(../images/date_today_img.png) no-repeat 50% 50% / 30px}
+
 
 /* 캘린더 daterangepicker */
 .daterangepicker {position:fixed;left:50% !important;top:50% !important;z-index:50;width:auto;margin-top:0;padding:15px 0 5px;transform:translate(-50%, -50%);font-family: 'Montserrat', sans-serif;}
@@ -589,6 +586,7 @@ input[type="checkbox"] {display: none;}
 .daterangepicker td.in-range:not(.end-date, .start-date) {border-radius:0;width:30px;min-width:30px;background:url(../images/date_mid.png) no-repeat 50% 50% / 30px}
 .daterangepicker td.start-date.end-date,
 .daterangepicker td.today.in-range {border-radius:0;height:30px;width:30px;min-width:30px;background:url(../images/date_today_img.png) no-repeat 50% 50% / 30px !important}
+.datepicker_dim,
 .daterangepicker_dim {position:fixed;left:0;top:0;z-index:10;width:100%;height:100%;background-color:rgba(0,0,0,0.35); -webkit-backdrop-filter:saturate(180%) blur(1px);
   backdrop-filter: saturate(180%) blur(1px);pointer-events:none;}
 .daterangepicker .calendar-table td.ends {opacity:0;pointer-events:none;}
@@ -596,19 +594,19 @@ input[type="checkbox"] {display: none;}
   
 /* 캘린더 */
 .ui-widget-header {background-color:transparent;border:0}
-.ui-datepicker {font-family: 'Montserrat', sans-serif;}
+.ui-datepicker {}
 .ui-datepicker .ui-datepicker-title {margin:0;padding:0 10px;text-align:left;}
 .ui-widget.ui-widget-content {left:50% !important;top:50% !important;width:85%;padding:25px 17px 20px;transform:translate(-50%, -50%);border:0;border-radius:13px;}
 .ui-datepicker-calendar {width:100%;text-align:center;}
 .ui-datepicker-calendar thead span {font-size:10px;color:rgb(112,112,112);font-weight:400;}
 .ui-datepicker-current-day {background-color: red;}
-.ui-datepicker-calendar thead th {padding:0 0 18px}
+.ui-datepicker-calendar thead th {padding:0 0 15px;font-family: 'Noto Sans KR', sans-serif;font-size:12px;font-weight:500;}
+.ui-datepicker-calendar thead th span {font:inherit !important;}
 .ui-datepicker-calendar td {width:40px;height:37px}
 .ui-datepicker-calendar td span,
 .ui-datepicker-calendar td a {height:37px;border:0;line-height:37px;font-size:13px}
 .ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default, .ui-button, html .ui-button.ui-state-disabled:hover, html .ui-button.ui-state-disabled:active {display:inline-block;padding:0;border:0;text-align:center;border-radius:50%;background-color:transparent;width:36px;height:36px;font-size:14px}
 .ui-datepicker-current-day {background-color:transparent;}
-.ui-state-highlight, .ui-widget-content .ui-state-highlight, .ui-widget-header .ui-state-highlight {}
 .ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active, a.ui-button:active, .ui-button:active, .ui-button.ui-state-active:hover {background-color:#fd9647;color:#fff}
 .ui-widget-header .ui-icon {background:url(../images/arrow-right-orange@2x.png) no-repeat;background-size:cover;}
 .ui-datepicker .ui-datepicker-header {padding:0 0 18px}
@@ -633,7 +631,6 @@ input[type="checkbox"] {display: none;}
 .hospital_03 .ui-datepicker-calendar .end_day a {background-color:#fd9647;}
 
 /* 나의 알림 */
-.history_wrap {}
 .history_wrap .c_inner {padding-top:18px}
 .history_wrap .relative {position: relative;}
 .history_wrap .swiper-slide {width:auto;padding:4px 16px 5px;border-radius:52px;border:1px solid rgb(181,181,181);font-size:12px;font-weight:300;}
@@ -658,7 +655,6 @@ input[type="checkbox"] {display: none;}
 .mypoint_wrap .more {display:inline-block;width:31px}
 
 /* 마이페이지 - 회원정보 */
-.mypage_profile {}
 .mypage_profile .profile_wrap {flex-direction:column;align-items:center;}
 .mypage_profile .profile_wrap .thumb {width:88px;height:88px}
 .mypage_profile .profile_wrap .info {padding:8px 0 0;text-align:center;font-size:0;}
@@ -676,7 +672,6 @@ input[type="checkbox"] {display: none;}
 .mypage_profile .btn_modify {display:block;width:180px;margin:30px auto}
 
 /* 마이페이지 - 내카드등록하기 */
-.mypage_card {}
 .mypage_card .icon_ty01 {margin-left:10px}
 .mypage_card .btn_logout {margin-top:35px}
 
@@ -689,17 +684,15 @@ input[type="checkbox"] {display: none;}
 .mypage_ .card_list .panel .row {display:flex;position:relative;padding:5px 15px;align-items:center;justify-content:space-between;font-size:10px;color:#707070}
 
 /* 마이페이지 - 계좌 연동하기 */
-.mypage_account {}
 .mypage_account .add {display:block;margin:15px 0 0;padding:5px 0;text-align:center;color:#707070;font-size:15px;}
 .mypage_account .btn_logout {margin:50px 0 0;}
 
 /* 호텔예약화면 - 예약 완료 */
-.reservation_complete {display:flex;align-items:center;justify-content:center;height:calc(100vh - 150px);flex-direction:column;}
+.reservation_complete {display:flex;align-items:center;justify-content:center;height:calc(100vh - 150px);flex-direction:column}
 .reservation_complete h3 {margin:0 0 35px;font-size:20px;color:#707070}
 .reservation_complete .btn_ty01 {display:block;width:145px;margin:0 auto 12px;font-weight:500;}
 
 /* 충전금액 */
-.layer_price {}
 .layer_price .price_form input[type="text"] {width:calc(100% - 40px);padding:8px;border:0;border-bottom:1px solid #000;border-radius:0;}
 .layer_price .price_form b {width:30px}
 .layer_price .price_form .btns {margin:40px 0 0;text-align:right;}
